--- a/package.json
+++ b/package.json
@@ -6,24 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
     "@google/generative-ai": "^0.17.2",
+    "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@stripe/stripe-js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
+    "micro": "^10.0.1",
     "next": "14.2.9",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "stripe": "^16.10.0",
+    "svix": "^1.33.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -31,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
     "postcss": "^8",
