--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
+    "mailtrap": "^3.4.0",
     "micro": "^10.0.1",
     "next": "14.2.9",
     "next-themes": "^0.3.0",
