--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
+    "@clerk/themes": "^2.1.35",
     "@google/generative-ai": "^0.17.2",
     "@neondatabase/serverless": "^0.9.5",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -22,7 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.10.0",
     "lucide-react": "^0.439.0",
     "mailtrap": "^3.4.0",
     "micro": "^10.0.1",
